syntax = "proto3";

message Item {
    string key = 1;
    bytes value = 2;

    int64 casID = 3;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    Item item = 1;
}

message SetRequest {
    Item item = 1;
}

message SetResponse {
    Item item = 1;
}

message CompareAndSwapRequest {
    Item item = 1;
}

message CompareAndSwapResponse {
    Item item = 1;
}

message RemoveRequest {
   string key = 1;
}

message RemoveResponse {
    Item item = 1;
}

message ClearRequest {

}

message ClearResponse {

}

message SizeRequest {

}

message SizeResponse {
    uint64 size = 1;
}

service Memcached {
    rpc Get(GetRequest) returns (GetResponse) {};
    rpc Set(SetRequest) returns (SetResponse) {};
    rpc CompareAndSwap(CompareAndSwapRequest) returns (CompareAndSwapResponse) {};
    rpc Remove(RemoveRequest) returns (RemoveResponse) {};
    rpc Clear(ClearRequest) returns (ClearResponse) {};
    rpc Size(SizeRequest) returns (SizeResponse) {};
}

